# criptPass

./: pyproject.toml
src/: cript_data.py  installer.py  interface.py  interface.spec
