[tool.poetry]
name = "CRIPTPASS"
version = "0.1.0"
description = ""
authors = ["Gpocas <gpocas01@gmail.com>"]

[tool.poetry.dependencies]
python = ""
cryptography = "^38.0.1"
PySimpleGUI = "^4.60.3"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
